[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["pgjones <philip.graham.jones@googlemail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[tool.poetry.scripts]
test = "pytest:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
